--- a/index.njk
+++ b/index.njk
@@ -5,6 +5,11 @@ title: Brad Harris
 <h1>🤝 welcome traveler</h1>
 
 
-<article>
+<article id="home-content">
+  <img src="/images/mckay-brad.jpg"/>
 
+  <section>
+    <p>My name is Brad Harris.</p>
+    <p>Read more <a href="/about">about me</a>, or check out some of <a href="/posts">my ramblings</a>.
+  </section>
 </article>
