--- a/index.njk
+++ b/index.njk
@@ -6,7 +6,7 @@ title: Brad Harris
 
 
 <article id="home-content">
-  <img src="/images/mckay-brad.jpg"/>
+  <img src="/images/mckay-brad.jpg" class="glow"/>
 
   <section>
     <p>My name is Brad Harris.</p>
