--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -11,9 +11,9 @@ mainClass: "main"
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/styles.css" />
+  <link rel="stylesheet" href="/styles/styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/styles/default.min.css">
-  <link rel="stylesheet" href="/assets/monokai.css" />
+  <link rel="stylesheet" href="/styles/monokai.css" />
   <script>
     (() => {
       // prevent flashing of light=>dark mode on load
