--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -57,5 +57,14 @@ mainClass: "main"
     </footer>
   </div>
   <script src="/scripts/dark-mode-toggle.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-49NP8W3EPZ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-49NP8W3EPZ');
+  </script>
 </body>
 </html>
