dark-mode-toggle web component

--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -46,14 +46,7 @@ mainClass: "main"
       <a href="https://twitter.com/selfc0ntained"><img src="/icons/twitter.png" width="15"/></a>
       <a href="https://github.com/selfcontained"><img src="/icons/github.png" width="15"/></a>
       <a href="https://www.linkedin.com/in/bradharris/"><img src="/icons/linkedin.png" width="15"/></a>
-      <div class="dark-mode-toggle-container">
-        <input type="checkbox" class="checkbox" id="dm-toggle">
-        <label for="dm-toggle" class="label">
-          <div class='ball'></div>
-          <span class="dark-label">D</span>
-          <span class="light-label">L</span>
-        </label>
-      </div>
+      <dark-mode-toggle key="dark-mode" darkmode-class="dark-mode" />
     </footer>
   </div>
   <script src="/scripts/dark-mode-toggle.js"></script>
