--- a/index.njk
+++ b/index.njk
@@ -1,12 +1,14 @@
 ---
 title: Brad Harris
+thumbnailImage: "/images/mckay-brad.jpg"
+thumbnailImageAlt: "Picture of Mckay and Brad. Mckay has really awesome glasses on."
 ---
   
 <h1>🤝 welcome traveler</h1>
 
 
 <article id="home-content">
-  <img src="/images/mckay-brad.jpg" class="glow"/>
+  <img src="/images/mckay-brad.jpg" class="glow" alt="{{thumbnailImageAlt}}"/>
 
   <section>
     <p>My name is Brad Harris.</p>
