--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -1,12 +1,14 @@
 ---
 mainClass: "main"
+metaDescription: "Hello, I'm Brad Harris. I help build products with software, and love the web ❤️. I live in Castle Rock, Colorado and stay busy enjoying life with my family."
 ---
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="theme-color" content="#0C171C">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>{{ title }}</title>
+
   <link rel="icon" type="image/png" href="/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +16,44 @@ mainClass: "main"
   <link rel="stylesheet" href="/styles/styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/styles/default.min.css">
   <link rel="stylesheet" href="/styles/monokai.css" />
+
+  <title>{{ title }}</title>
+  <meta content="{{metaDescription}}" name="description">
+
+  {# OG tags #}
+  <meta property="og:url" content="{{url | url(true) }}" >
+  <meta property="og:title" content="{{title}}" >
+  {% if thumbnailImage %}
+    <meta property="og:image" content="{{thumbnailImage | url(true) }}" >
+  {% endif %}
+  {# use the excerpt if its there, otherwise default description #}
+  {% if excerpt %}
+    <meta property="og:description" content="{{excerpt}}" >
+  {% else %}
+    <meta property="og:description" content="{{metaDescription}}" >
+  {%endif %}
+  {# Twitter tags #}
+  {% if thumbnailImage %}
+    <meta name="twitter:card" content="summary_large_image" >
+  {% else %}
+    <meta name="twitter:card" content="summary" >
+  {% endif %}
+  <meta name="twitter:site" content="@selfc0ntained" >
+  <meta name="twitter:creator" content="@selfc0ntained" >
+  <meta name="twitter:title" content="{{title}}" >
+  {# use the excerpt if its there, otherwise default description #}
+  {% if excerpt %}
+    <meta name="twitter:description" content="{{excerpt}}" >
+  {% else %}
+    <meta name="twitter:description" content="{{metaDescription}}" >
+  {%endif %}
+  {% if thumbnailImage %}
+    <meta name="twitter:image" content="{{thumbnailImage | url(true) }}" >
+  {% endif %}
+  {% if thumbnailImageAlt %}
+    <meta name="twitter:image:alt" content="{{thumbnailImageAlt}}" >
+  {% endif %}
+
   <script>
     (() => {
       // prevent flashing of light=>dark mode on load
@@ -50,14 +90,16 @@ mainClass: "main"
     </footer>
   </div>
   <script src="/scripts/dark-mode-toggle.js"></script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-49NP8W3EPZ"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+  {% if dev != true %}
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-49NP8W3EPZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-    gtag('config', 'G-49NP8W3EPZ');
-  </script>
+      gtag('config', 'G-49NP8W3EPZ');
+    </script>
+  {% endif %}
 </body>
 </html>
