--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -1,6 +1,8 @@
 ---
 mainClass: "main"
 metaDescription: "Hello, I'm Brad Harris. I help build products with software, and love the web ❤️. I live in Castle Rock, Colorado and stay busy enjoying life with my family."
+thumbnailImage: "/post-thumbnails/brad.jpg"
+thumbnailImageAlt: "Picture of Brad Harris"
 ---
 <!doctype html>
 <html lang="en">
@@ -76,7 +78,7 @@ metaDescription: "Hello, I'm Brad Harris. I help build products with software, a
         </ul>
       </nav>
     </header>
-    
+
 
     <main class="{{ mainClass }}">
       {{ content | safe }}
