tweaking twitter cards

--- a/index.njk
+++ b/index.njk
@@ -2,8 +2,9 @@
 title: Brad Harris
 thumbnailImage: "/images/mckay-brad.jpg"
 thumbnailImageAlt: "Picture of Mckay and Brad. Mckay has really awesome glasses on."
+twitterCard: "summary_large_image"
 ---
-  
+
 <h1>🤝 welcome traveler</h1>
 
 
