--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -3,6 +3,7 @@ mainClass: "main"
 metaDescription: "Hello, I'm Brad Harris. I help build products with software, and love the web ❤️. I live in Castle Rock, Colorado and stay busy enjoying life with my family."
 thumbnailImage: "/post-thumbnails/brad.jpg"
 thumbnailImageAlt: "Picture of Brad Harris"
+twitterCard: "summary"
 ---
 <!doctype html>
 <html lang="en">
@@ -35,11 +36,7 @@ thumbnailImageAlt: "Picture of Brad Harris"
     <meta property="og:description" content="{{metaDescription}}" >
   {%endif %}
   {# Twitter tags #}
-  {% if thumbnailImage %}
-    <meta name="twitter:card" content="summary_large_image" >
-  {% else %}
-    <meta name="twitter:card" content="summary" >
-  {% endif %}
+  <meta name="twitter:card" content="{{twitterCard}}" >
   <meta name="twitter:site" content="@selfc0ntained" >
   <meta name="twitter:creator" content="@selfc0ntained" >
   <meta name="twitter:title" content="{{title}}" >
