renaming some folders

--- a/posts/index.njk
+++ b/posts/index.njk
@@ -42,6 +42,6 @@ title: Posts - Brad Harris
   </p>
 
   <p>
-    I've also got a collection of <a href="{{ '~/legacy/index.njk' | url }}">old school posts</a> from the beginning of my career.
+    I've also got a collection of <a href="{{ '~/old-school/index.njk' | url }}">old school posts</a> from the beginning of my career.
   </p>
 </article>
