adjusting posts listings

--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -6,7 +6,7 @@ twitterCard: "summary_large_image"
 ---
 
 {% if heroImage != "" %}
-  <img src={{heroImage}} class="post-hero-image" alt="{{heroImageAlt}}"/>
+  <img src={{heroImage}} class="post-hero-image glow" alt="{{heroImageAlt}}"/>
 {% endif %}
 <h1>{{ title }}</h1>
 <time>{{ date | date('PPP') }}</time>
