--- a/index.njk
+++ b/index.njk
@@ -8,11 +8,19 @@ twitterCard: "summary_large_image"
 <h1>🤝 welcome traveler</h1>
 
 
-<article id="home-content">
+<div id="home-content">
   <img src="/images/mckay-brad.jpg" class="glow" alt="{{thumbnailImageAlt}}"/>
 
   <section>
     <p>My name is Brad Harris.</p>
     <p>Read more <a href="/about">about me</a>, or check out some of <a href="/posts">my ramblings</a>.
   </section>
-</article>
+</div>
+
+<div>
+  <hr />
+
+  <h2>📃 Latest Posts</h2>
+
+  {{ comp.postlist({ posts: search.pages("post new", "date=desc") }) | safe }}
+</div>
