adding an h-card to the homepage

--- a/index.njk
+++ b/index.njk
@@ -8,11 +8,11 @@ twitterCard: "summary_large_image"
 <h1>🤝 welcome traveler</h1>
 
 
-<div id="home-content">
-  <img src="/images/mckay-brad.jpg" class="glow" alt="{{thumbnailImageAlt}}"/>
+<div id="home-content" class="h-card">
+  <a href="/" class="u-url"><img src="/images/mckay-brad.jpg" class="glow u-photo" alt="{{thumbnailImageAlt}}"/></a>
 
-  <section>
-    <p>My name is Brad Harris.</p>
+  <section class="p-note">
+    <p>My name is <span class="p-name">Brad Harris</span>.</p>
     <p>Read more <a href="/about">about me</a>, or check out some of <a href="/posts">my ramblings</a>.
   </section>
 </div>
