adding dark-mode-toggle to header

--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -74,6 +74,7 @@ twitterCard: "summary"
           <li><a href="{{ '~/posts/index.njk' | url }}">posts</a></li>
         </ul>
       </nav>
+      <dark-mode-toggle key="dark-mode" darkmode-class="dark-mode" />
     </header>
 
 
