add some more glow

--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -83,9 +83,9 @@ twitterCard: "summary"
     </main>
     <footer>
       <span>© {{ now | date('yyyy') }} Brad Harris</span>
-      <a href="https://twitter.com/selfc0ntained" rel="me"><img src="/icons/twitter.png" width="15"/></a>
-      <a href="https://github.com/selfcontained" rel="me"><img src="/icons/github.png" width="15"/></a>
-      <a href="https://www.linkedin.com/in/bradharris/" rel="me"><img src="/icons/linkedin.png" width="15"/></a>
+      <a href="https://twitter.com/selfc0ntained" rel="me"><img src="/icons/twitter.png" width="15" class="glow-2"/></a>
+      <a href="https://github.com/selfcontained" rel="me"><img src="/icons/github.png" width="15" class="glow"/></a>
+      <a href="https://www.linkedin.com/in/bradharris/" rel="me"><img src="/icons/linkedin.png" width="15" class="glow-3"/></a>
       <dark-mode-toggle key="dark-mode" darkmode-class="dark-mode" />
     </footer>
   </div>
