--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,7 +1,7 @@
 :root {
   --boofer: 20px;
   --boofer-sm: 10px;
-  --color-bg: #fff;
+  --color-bg: #f3f0e8;
   --color-text: #000;
   --color-subtext: #4B5154;
   --color-links: #0197F6;
@@ -46,6 +46,24 @@ body {
     0px 0px 25px var(--color-links);
 }
 
+.dark-mode .glow-2 {
+  border-color: #fff;
+  transition: box-shadow 1000ms ease-in-out;
+  box-shadow:
+    0px 0px 2px var(--color-accent2),
+    0px 0px 5px var(--color-accent2),
+    0px 0px 25px var(--color-accent2);
+}
+
+.dark-mode .glow-3 {
+  border-color: #fff;
+  transition: box-shadow 1000ms ease-in-out;
+  box-shadow:
+    0px 0px 2px var(--color-accent),
+    0px 0px 5px var(--color-accent),
+    0px 0px 25px var(--color-accent);
+}
+
 .dark-mode h1 {
   transition: text-decoration 300ms ease-in-out;
   color: var(--color-accent);
@@ -60,6 +78,10 @@ body {
 
 .dark-mode .posts-list a {
   color: var(--color-accent2);
+}
+
+.dark-mode footer a img {
+  background-color: #fff;
 }
 
 #theme-toggle {
@@ -121,7 +143,7 @@ footer a {
 
 footer a img {
   width: 20px;
-  background-color: #fff;
+  background-color: transparent;
 }
 
 main {
